--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -3,17 +3,17 @@
     grid-template-columns: 100%;
     grid-template-rows: 20% 50% 20%;
     grid-row-gap: 5%;
-    height: 500px;
-    width:100%;
-    max-width: 450px;
+    height: 100%;
+    max-height: 500px;
+    width: 450px;
     background-color: #ffffffF9;
-    position:relative;
-    top:20%;
     margin:auto;
     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.35);
     border-radius: 4px;
     border-color:transparent;
     animation: slideInLeft 800ms ease-in-out;
+    position: relative;
+    z-index: 10;
 }
  @keyframes slideInLeft {
      from{
@@ -114,4 +114,14 @@
 }
 .footer-login>span:hover{
     color: #0076F2BB;
+}
+@media only screen and (max-height:800px) and (max-width:500px){
+    #form-login{
+        height: 100vh;
+        width: 100vw;
+        box-shadow: none;
+        min-height: 500px;
+        border:none;
+        max-height: unset;
+    }
 }
