--- a/src/components/Options/Options.css
+++ b/src/components/Options/Options.css
@@ -47,3 +47,13 @@
 #add-btn{
 	background-color: #0076F2;
 }
+@media only screen and (max-height:800px) and (max-width:500px){
+    #options-container{
+        height: 100vh;
+        width: 100vw;
+        box-shadow: none;
+        min-height: 500px;
+        border:none;
+        max-height: unset;
+    }
+}
