--- a/src/components/Welcome/Welcome.css
+++ b/src/components/Welcome/Welcome.css
@@ -65,13 +65,15 @@
     }
 }
 #start{
-    width:130px;
+    max-width:150px;
+    width: 10%;
+    min-width: 110px;
     height: 50px;
     background: transparent;
     border:2px solid #ffffffCC;
     color:#ffffffCC;
     font-weight: bolder;
-    font-size: 16px;
+    font-size: 15px;
     border-radius:7px;
     cursor: pointer;
     position: relative;
