--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ code {
 
 #root{
   width:100%;
-  height: 100%;
+  height: 100vh;
   background:linear-gradient(135deg,#00ccff,#0000dd);
   font-family: "roboto mono";
 }
