--- a/src/components/Options/Options.css
+++ b/src/components/Options/Options.css
@@ -8,7 +8,8 @@
 #options-container{
 	width: 90%;
 	max-width: 450px;
-	height: 500px;
+	max-height: 500px;
+	height: 100%;
 	background-color: white;
 	border-radius: 0px 15px;
 	box-shadow: 12px 11px 5px 1px rgba(0,0,0,0.2);
