--- a/src/containers/Add/Add.css
+++ b/src/containers/Add/Add.css
@@ -4,22 +4,20 @@
 	align-items: center;
 	height: 100%;
 	width: 100%;
+	min-height: 550px;
 }
 #back-to-menu{
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	position: fixed;
 	top: 20px;
-	left: 4%;
+	left: 3.5%;
 	height: 55px;
 	width: 55px;
 	border-radius: 50%;
 	border:2px solid white;
 	background-color: #00C0FD;
-	font-size: 28px;
+	font-size: 35px;
+	font-weight: bolder;
 	color: white;
-	padding-right: 10px;
 	transition: all 0.4s ease-out;
 	cursor: pointer;
 	z-index: 10;
@@ -62,7 +60,7 @@
 	height: 48px;
 	background-color: #0076ff;
 	position: absolute;
-	bottom: 12.5px;
+	bottom: 8px;
 	right: 20px;
 	border: none;
 	border-radius: 0px 5px;
@@ -84,16 +82,6 @@
 	color: #0076ff;
 	font-weight: bold;
 }
-.language-add{
-	font-style: italic;
-	width: 30%;
-	height: 40px;
-	margin-left: auto;
-	margin-right: 7.5px;
-	padding-left: 5px;
-	border:1px solid #00000033;
-	color:#000000bb;
-}
 .textarea-add{
 	border:1px solid #00000033;
 	font-style: italic;
@@ -105,7 +93,13 @@
 	font-style: normal;
 	color:#000000bb;
 }
-.language-add:focus{
-	font-style: normal;
-	color:#000000bb;
+@media only screen and (max-height:800px) and (max-width:500px){
+    #add-container{
+        height: 100vh;
+        width: 100vw;
+        box-shadow: none;
+        min-height: 500px;
+        border:none;
+        max-height: unset;
+    }
 }
