--- a/src/containers/Play/Play.css
+++ b/src/containers/Play/Play.css
@@ -4,6 +4,7 @@
 	align-items: center;
 	height: 100vh;
 	width: 100vw;
+	min-height: 550px;
 }
 #play-container{
 	width: 92%;
@@ -111,4 +112,14 @@
 }
 #question-place{
 	text-transform: capitalize;
+}
+@media only screen and (max-height:800px) and (max-width:500px){
+    #play-container{
+        height: 100vh;
+        width: 100vw;
+        box-shadow: none;
+        min-height: 500px;
+        border:none;
+        max-height: unset;
+    }
 }
