--- a/src/containers/Search/Search.css
+++ b/src/containers/Search/Search.css
@@ -4,6 +4,7 @@
 	align-items: center;
 	height: 100%;
 	width: 100%;
+	min-height: 500px;
 }
 #search-container{
 	width: 92%;
@@ -62,4 +63,14 @@
 	border:2px solid #0076ff;
 	color: #0076ff;
 	font-weight: bold;
+}
+@media only screen and (max-height:800px) and (max-width:500px){
+    #search-container{
+        height: 100vh;
+        width: 100vw;
+        box-shadow: none;
+        min-height: 500px;
+        border:none;
+        max-height: unset;
+    }
 }
